--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -81,7 +81,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "sup = pd.read_csv('data/sup.csv')\n",
+    "\n",
+    "plt.figure(figsize = (10,10))\n",
+    "\n",
+    "plt.title(\"water Level of Lake Superior\")\n",
+    "plt.xlabel(\"Date (year)\")\n",
+    "plt.ylabel(\"Water Level (feet)\")\n",
+    "plt.plot(sup.iloc[:,0], sup.iloc[:,1], color = 'red')"
    ]
   },
   {
@@ -290,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
