--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -117,7 +117,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "df = pd.read_csv(\"./data/ont.csv\")\n",
+    "plt.plot(df.iloc[:,0],df.iloc[:,1])\n",
+    "plt.xlabel(\"Years\")\n",
+    "plt.ylabel(\"Water Level\")"
    ]
   },
   {
@@ -290,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
